{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 38,
  "lineage": "547e50ff-08ab-a2b9-2db3-c62ca52c9fe4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:335360747704:internet-gateway/igw-0b9b162afb9bfbff1",
            "id": "igw-0b9b162afb9bfbff1",
            "owner_id": "335360747704",
            "tags": {
              "Name": "dynamodb-sage-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-igw",
              "Project": "dynamodb-sage"
            },
            "vpc_id": "vpc-0c2eba6c64db0084c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:335360747704:loadbalancer/app/dynamodb-sage-alb/aa89432624f0e85d",
            "arn_suffix": "app/dynamodb-sage-alb/aa89432624f0e85d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dynamodb-sage-alb-421740889.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:335360747704:loadbalancer/app/dynamodb-sage-alb/aa89432624f0e85d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dynamodb-sage-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06cda5de73632c408"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e502ebab7631f04e"
              },
              {
                "subnet_id": "subnet-0fd75f8c3f9461e37"
              }
            ],
            "subnets": [
              "subnet-0e502ebab7631f04e",
              "subnet-0fd75f8c3f9461e37"
            ],
            "tags": {
              "Name": "dynamodb-sage-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-alb",
              "Project": "dynamodb-sage"
            },
            "vpc_id": "vpc-0c2eba6c64db0084c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:335360747704:listener/app/dynamodb-sage-alb/aa89432624f0e85d/e7175e19c3747f86",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:335360747704:targetgroup/dynamodb-sage-tg/a2efcbf385893031",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:335360747704:listener/app/dynamodb-sage-alb/aa89432624f0e85d/e7175e19c3747f86",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:335360747704:loadbalancer/app/dynamodb-sage-alb/aa89432624f0e85d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "dynamodb-sage"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:335360747704:targetgroup/dynamodb-sage-tg/a2efcbf385893031",
            "arn_suffix": "targetgroup/dynamodb-sage-tg/a2efcbf385893031",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:335360747704:targetgroup/dynamodb-sage-tg/a2efcbf385893031",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:335360747704:loadbalancer/app/dynamodb-sage-alb/aa89432624f0e85d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dynamodb-sage-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dynamodb-sage-tg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-tg",
              "Project": "dynamodb-sage"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c2eba6c64db0084c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:335360747704:route-table/rtb-0b81edd1fa164e1cc",
            "id": "rtb-0b81edd1fa164e1cc",
            "owner_id": "335360747704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9b162afb9bfbff1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dynamodb-sage-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-public-rt",
              "Project": "dynamodb-sage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eba6c64db0084c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010ad9e6feb526c4e",
            "route_table_id": "rtb-0b81edd1fa164e1cc",
            "subnet_id": "subnet-0e502ebab7631f04e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5f2d608f1827578",
            "route_table_id": "rtb-0b81edd1fa164e1cc",
            "subnet_id": "subnet-0fd75f8c3f9461e37"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:335360747704:security-group/sg-06cda5de73632c408",
            "description": "Allow inbound HTTP on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to Fargate tasks",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cda5de73632c408",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dynamodb-sage-alb-sg",
            "name_prefix": "",
            "owner_id": "335360747704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dynamodb-sage-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-alb-sg",
              "Project": "dynamodb-sage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eba6c64db0084c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:335360747704:security-group/sg-01295442cbb9a2f34",
            "description": "Allow inbound from ALB on container port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01295442cbb9a2f34",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06cda5de73632c408"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dynamodb-sage-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "335360747704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dynamodb-sage-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-ecs-tasks-sg",
              "Project": "dynamodb-sage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eba6c64db0084c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:335360747704:security-group/sg-02ae4f8b0a6dc47d1",
            "description": "Allow NFS from ECS tasks",
            "egress": [],
            "id": "sg-02ae4f8b0a6dc47d1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from ECS tasks",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01295442cbb9a2f34"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "dynamodb-sage-efs-sg",
            "name_prefix": "",
            "owner_id": "335360747704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dynamodb-sage-efs-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-efs-sg",
              "Project": "dynamodb-sage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eba6c64db0084c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:335360747704:subnet/subnet-0e502ebab7631f04e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e502ebab7631f04e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335360747704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dynamodb-sage-public-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-public-1",
              "Project": "dynamodb-sage"
            },
            "vpc_id": "vpc-0c2eba6c64db0084c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:335360747704:subnet/subnet-0fd75f8c3f9461e37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd75f8c3f9461e37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335360747704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dynamodb-sage-public-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-public-2",
              "Project": "dynamodb-sage"
            },
            "vpc_id": "vpc-0c2eba6c64db0084c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:335360747704:vpc/vpc-0c2eba6c64db0084c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4c8a84a18eb04ca",
            "default_route_table_id": "rtb-0aca3a9184ce47ac4",
            "default_security_group_id": "sg-0e93dd9414aac93a5",
            "dhcp_options_id": "dopt-04ceefa106d6fb4ba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2eba6c64db0084c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aca3a9184ce47ac4",
            "owner_id": "335360747704",
            "tags": {
              "Name": "dynamodb-sage-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dynamodb-sage-vpc",
              "Project": "dynamodb-sage"
            }
          }
        }
      ]
    }
  ]
}